alignment fix log in page

--- a/pages/css/login-signup-page.css
+++ b/pages/css/login-signup-page.css
@@ -14,7 +14,7 @@ body {
   justify-content: center;
   align-items: center;
 }
-
+.signup-box,
 .logo-box {
   height: 90%;
   width: 95%;
@@ -43,18 +43,7 @@ body {
   border-radius: 50%;
 }
 
-/* sign up box */
-.signup-box {
-  height: 30%;
-  width: 60%;
-  background-color: #300505;
-  border-radius: 12px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 30px;
-  margin-bottom: 100px;
-}
+
 
 .text-name {
   font-size: 20px;
